# playGround

algorithms/: min.c
algorithms/indexing/: min_with_offset.c
graphics/chafa_api/showpixel/: main  main.c
graphics/file/bitmap/: main  main.c  show.sh
graphics/gl/: main.cpp
graphics/ncurses/map/: README.md  damin  mancpy  old_main.c
graphics/sdl/test0/: hello.cpp
io/: .w
io/writetxt/: main  output.txt
legacy/cpp/: README.md
legacy/cpp/BinaryConverter/: Documentations.cpp  Numbers.cpp  Numbers.h  main.cpp
legacy/cpp/window-api/2-Win-Explorer/: CMakeLists.txt
legacy/cpp/window-api/2-Win-Explorer/include/: OptiStruct.h  OrderAlgorythms.h  UsingDelerations.h  WinAPIWrapper.h
legacy/cpp/window-api/2-Win-Explorer/src/: CMakeLists.txt  OptiStruct.cpp  OrderAlgorythms.cpp  WinAPIWrapper.cpp  cmake_install.cmake  main.cpp
legacy/legacy_cs/: README.md
linking/: main  main.c
map/: README.md  comments  damin_r  main  main.c
math/combinations/: main
math/pseudo-ableitung/: main.c  tempMathNotes.md  tmp.msg
math/sequence-number/: main.c
mathstuff/combinations/: main.c
mathstuff/pseudo-ableitung/: main
mathstuff/sequence-number/: main
mathstuff/visual-stuff/: main  main.c  some.c
one/: main  main.c
passwd-generator/: main  main.c
problems/: add_strings.c  main
sdl/test0/: CMakeCache.txt  CMakeLists.txt
sound/: main  main.c
sound/pw/: main  main.c  test1
speedtraining-research/: main  main.c
stdio/: input.txt  main  main.c  nearestBit.c
temp/: nearestBit
temp/linking/: tlib.c
tests/: main  main.c  wl-copy
(+62 files in other folders)
